--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,29 +1,37 @@
 ＞＞users/editページはじまり。
-<% provide(:title, "Edit user") %>
-<h1>Update your profile</h1>
+
+<h1>Edit profile</h1>
 
 <div class="gravatar_edit">
   <%= gravatar_for @user %>
   <a href="http://gravatar.com/emails">change</a>
 </div>
 
+<div class="ui form">
 
 <%= form_for(@user, html: { multipart: true }) do |f| %>
-<%= render 'shared/error_messages', object: f.object %>
 
-<%= f.label :name %>
-<%= f.text_field :name, class: 'form-control' %>
+  <%= render 'shared/error_messages', object: f.object %>
 
-<%= f.label :email %>
-<%= f.email_field :email, class: 'form-control' %>
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+  </div>
+  <div class="field">
+    <%= f.label :email %>
+    <%= f.email_field :email, class: 'form-control' %>
+  </div>
+  <div class="field">
+    <%= f.label :password %>
+    <%= f.password_field :password, class: 'form-control' %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation, "Confirmation" %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
+  </div>
 
-<%= f.label :password %>
-<%= f.password_field :password, class: 'form-control' %>
+  <%= f.submit "Save changes", class: "ui button" %>
 
-<%= f.label :password_confirmation, "Confirmation" %>
-<%= f.password_field :password_confirmation, class: 'form-control' %>
-
-
-<%= f.submit "Save changes", class: "btn btn-primary" %>
 <% end %>
-＜＜users/editページおわり。
+
+</div>
