Design Changed(about/help/styliststartページ）

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,121 @@
-<h1>About</h1>
+<title id="pageTitle">About | STYLATTE</title>
 
-<div class="ui heart rating" data-rating="2"></div>
+<!-- 企業理念 -->
+<h4 class="ui horizontal divider header">
+  Identity
+</h4>
+
+<div class="header">
+
+<div class="ui piled segment">
+  <h4 class="ui header">A header</h4>
+  <p>Te eum doming eirmod, nominati pertinacia argumentum ad his. Ex eam alia facete scriptorem, est autem aliquip detraxit at. Usu ocurreret referrentur at, cu epicurei appellantur vix. Cum ea laoreet recteque electram, eos choro alterum definiebas in. Vim dolorum definiebas an. Mei ex natum rebum iisque.</p>
+   <p>Audiam quaerendum eu sea, pro omittam definiebas ex. Te est latine definitiones. Quot wisi nulla ex duo. Vis sint solet expetenda ne, his te phaedrum referrentur consectetuer. Id vix fabulas oporteat, ei quo vide phaedrum, vim vivendum maiestatis in.</p>
+   <p>Eu quo homero blandit intellegebat. Incorrupte consequuntur mei id. Mei ut facer dolores adolescens, no illum aperiri quo, usu odio brute at. Qui te porro electram, ea dico facete utroque quo. Populo quodsi te eam, wisi everti eos ex, eum elitr altera utamur at. Quodsi convenire mnesarchum eu per, quas minimum postulant per id.</p>
+</div>
+
+</div>
+
+<!-- プロフィール -->
+<h4 class="ui horizontal divider header">
+  <i class="bar chart icon"></i>
+  Profile
+</h4>
+
 <%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %>
+<%= link_to image_tag("stylatte_logo_7.png", alt: "STYLATTE"), root_path %>
+
+
+<table class="ui definition table">
+  <tbody>
+    <tr>
+      <td class="two wide column">Name</td>
+      <td>STYLATTE (Made by Liebery)</td>
+    </tr>
+    <tr>
+      <td>Office</td>
+      <td>6 ounces</td>
+    </tr>
+    <tr>
+      <td>SNS</td>
+      <td>Yellowish</td>
+    </tr>
+    <tr>
+      <td>URL</td>
+      <td>
+        <div class="ui list">
+  <div class="item">
+    <i class="users icon"></i>
+    <div class="content">
+      Semantic UI
+    </div>
+  </div>
+  <div class="item">
+    <i class="marker icon"></i>
+    <div class="content">
+      New York, NY
+    </div>
+  </div>
+  <div class="item">
+    <i class="mail icon"></i>
+    <div class="content">
+      <a href="mailto:jack@semantic-ui.com">jack@semantic-ui.com</a>
+    </div>
+  </div>
+  <div class="item">
+    <i class="linkify icon"></i>
+    <div class="content">
+      <a href="http://www.semantic-ui.com">semantic-ui.com</a>
+    </div>
+  </div>
+</div>
+</td>
+    </tr>
+    <tr>
+      <td>Contact Us</td>
+      <td>Not Much Usually</td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- ニュース -->
+<h4 class="ui horizontal divider header">
+  News
+</h4>
+
+<p>Doggie treats are good for all times of the year. Proven to be eaten by 99.9% of all dogs worldwide.</p>
+
+<!-- プレス記録とプレスの方向け案内 -->
+<h4 class="ui horizontal divider header">
+  Press
+</h4>
+
+<p>STYLATTE is used and loved by millions of people around the globe.</p>
+
+<!-- 投資家向け案内 -->
+<h4 class="ui horizontal divider header">
+  Investment
+</h4>
+
+<p>STYLATTE is used and loved by millions of people around the globe.</p>
+
+
+<!-- 求人 -->
+<h4 class="ui horizontal divider header">
+  Team
+</h4>
+
+<p>Doggie treats are good for all times of the year. Proven to be eaten by 99.9% of all dogs worldwide.</p>
+
+<!-- メンバー紹介 -->
+<div class="ui horizontal list">
+  <div class="item">
+    <img class="ui avatar image" src="face5.jpg">
+    <div class="content">
+      <div class="header">Christian Rocha</div>
+      Admin
+    </div>
+  </div>
+</div>
+
+<!-- 求人画像ここに貼る We are hiring-->
