--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,12 +1,24 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<title id="pageTitle">Help | STYLATTE</title>
 
-プライバシーポリシー
+<h1>FAQ</h1>
 
-
-よくある質問
-・無料で利用できますか？
--提案を受ける側、提案する側のユーザーともに無料です。（ただし、一部提案する側のユーザーが応用機能を利用したい場合、有料機能もあります。詳しくは、Stylistになるページをご覧ください。）
-
-・自社の広告をのせてもらうことはできますか？
--広告募集ページをご覧ください。
+<!-- アコーディオンにしたいときは、こちら；http://semantic-ui.com/modules/accordion.html -->
+<div class="ui segments">
+  <div class="ui segment">
+    <p>Top</p>
+  </div>
+  <div class="ui red segment">
+    <p>Middle</p>
+  </div>
+  <div class="ui blue segment">
+    <p>Middle</p>
+  </div>
+  <div class="ui green segment">
+    <p>無料で利用できますか？</p><br>
+    -提案を受ける側、提案する側のユーザーともに無料です。（ただし、一部提案する側のユーザーが応用機能を利用したい場合、有料機能もあります。詳しくは、Stylistになるページをご覧ください。）
+  </div>
+  <div class="ui yellow segment">
+  <p>自社の広告をのせてもらうことはできますか？</p><br>
+    -広告募集ページをご覧ください。
+  </div>
+</div>
