--- a/app/views/static_pages/styliststart.html.erb
+++ b/app/views/static_pages/styliststart.html.erb
@@ -1,71 +1,76 @@
-<!-- トップでひきつけるスローガン的な -->
-<div class="intro">
-  <div class="intro-body">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <h1 class="cover-heading">Your idea may help someone.</h1>
-          <p class="lead">Free, you can get advices from cool friends all over world.</p>
+<!-- semanticUIのトップページのヘッダー真似したがうまく動いていない。 -->
+<div class="ui container">
+    <div class="introduction">
+      <%= link_to image_tag("stylatte_logo_7.png", alt: "STYLATTE"), root_path %>
+      <h1 class="ui header">
+        <span class="library">
+          Semantic UI
+        </span>
+        <span class="tagline">
+          Your idea may help someone.
+        </span>
+      </h1>
+      <div class="ui hidden divider"></div>
 
-          <div class="inner">
-            <p>read more details  <a href="#">Questions</a>
-              <br> I understand <a href="#"> Privacy Statement</a></p>
-            </div>
-          </div>
+      <a href="/introduction/getting-started.html" class="ui huge inverted download button">
+        Get Started
+      </a>
+      <a href="/introduction/new.html" class="ui huge inverted basic button">New in 2.2 - June 2016</a>
+    </div>
+    <div class="advertisement">
+
+      <div id="carbonads-container">
+        <div class="carbonad">
+          <div id="azcarbon"></div>
+          <script type="text/javascript">var z = document.createElement("script"); z.type = "text/javascript"; z.async = true; z.src = "http://engine.carbonads.com/z/51619/azcarbon_2_1_0_VERTDARK"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(z, s);</script>
         </div>
       </div>
+
     </div>
   </div>
 
-  <!-- プライスリスト -->
-  <h1 class="cover-heading">Course</h1>
+          <p>Free, you can get advices from cool friends all over world.</p>
+            <p>I understand <a href="#"> Privacy Statement</a></p>
 
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="plan-table plan-free">
-          <table>
-            <tr><th>Stylist</th></tr>
-            <tr><td class="plan-price">Free</td></tr>
-            <tr><td>Liveレッスン視聴</td></tr>
-            <tr><td>無料イベント参加</td></tr>
-            <tr><td>お知らせニュースレター購読</td></tr>
-          </table>
-        </div>
-      </div>
 
-      <div class="col-md-4">
-        <div class="plan-table plan-plus">
-          <table>
-            <tr><th>Stylist-Plus</th></tr>
-            <tr><td class="plan-price">3,000<span> 円／月</span></td></tr>
-            <tr><td>Liveレッスン視聴</td></tr>
-            <tr><td>全イベント参加</td></tr>
-            <tr><td>お知らせニュースレター購読</td></tr>
-            <tr><td>テキストダウンロード可</td></tr>
-            <tr><td>字幕表示</td></tr>
-          </table>
-        </div>
-      </div>
+<!-- プライスリスト -->
+<table class="ui celled table">
+  <thead>
+    <tr></tr>
+    <tr>
 
-      <div class="col-md-4">
-        <div class="plan-table plan-premium">
-          <table>
-            <tr><th>Stylist-Premium</th></tr>
-            <tr><td class="plan-price">10,000<span> 円／月</span></td></tr>
-            <tr><td>Liveレッスン視聴</td></tr>
-            <tr><td>無料イベント参加</td></tr>
-            <tr><td>お知らせニュースレター購読</td></tr>
-            <tr><td>お知らせニュースレター購読</td></tr>
-            <tr><td>お知らせニュースレター購読</td></tr>
-            <tr><td>お知らせニュースレター購読</td></tr>
-          </table>
-        </div>
-      </div>
-    </div>
+      <th>Stylist(Free)</th>
+      <th>Stylist-Plus</th>
+      <th>Stylist-Premium</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
 
-    <h2>question?</h2>
-    <h2>Need more? contact us.</h2>
+      <td>Cell</td>
+      <td>Cell</td>
+    </tr>
+    <tr>
+      <td>Cell</td>
+      <td>Cell</td>
+      <td>Cell</td>
+    </tr>
+    <tr>
+      <td>Cell</td>
+      <td>Cell</td>
+      <td>Cell</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr><th colspan="3">
+    </th>
+  </tr></tfoot>
+</table>
+
+
+
+
+<h2>Need more? contact us.</h2>
 
   </div>
 
@@ -154,6 +159,34 @@
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
           </dd>
         </dl>
+      </div>
+    </div>
+  </div>
+
+<!-- まだうまく動いていない。画像にしたら、プライスリストを入れる。 -->
+  <div class="ui three column grid">
+    <div class="column">
+      <div class="ui fluid image">
+        <a class="ui left corner label">
+        <i class="heart icon"></i>
+      </a>
+        <img src="/images/wireframe/image.png">
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui fluid image">
+        <div class="ui blue ribbon label">
+          <i class="spoon icon"></i> Upcoming
+        </div>
+        <img src="/images/wireframe/image.png">
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui fluid image">
+        <div class="ui black ribbon label">
+          <i class="hotel icon"></i> Hotel
+        </div>
+        <img src="/images/wireframe/image.png">
       </div>
     </div>
   </div>
