--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,3 +35,10 @@
 <% end %>
 
 </div>
+
+<div class="ui labeled input">
+  <div class="ui label">
+    http://
+  </div>
+  <input type="text" placeholder="mysite.com">
+</div>
