Static_pages (admin/policyページ)を作った。

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,7 +22,7 @@
         <div class="ui link list">
           <%= link_to "Company", about_path %><br>
           <%= link_to "Terms and Conditions", users_path %><br>
-          <%= link_to "Private Policy", users_path %><br>
+          <%= link_to "Private Policy", policy_path %><br>
 
         </div>
         <!-- コピーライト -->
@@ -30,7 +30,7 @@
 
         <!-- 管理者への入り口 -->
         <div class="ui inverted link list">
-          <button class="ui red basic button"><%= link_to "Admin", root_path %></button>
+          <button class="ui red basic button"><%= link_to "Admin", admin_path %></button>
         </div>
       </div>
 
